changed dataset call

--- a/distances.ipynb
+++ b/distances.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = pt.dt.distance_example_data()\n",
+    "adata = pt.dt.distance_example()\n",
     "obs_key = 'perturbation'  # defines groups to test"
    ]
   },
